<resources>
    <string name="app_name">OneBack</string>

    <string name="label_google_sign_in">Google Login</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="desc_twitter_login">Twitter Login</string>

    <string name="desc_emailpassword">E-mail e senha</string>

    <string name="label_passwordless">Sistema gera acesso</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="desc_phone_auth">Login pelo celular.</string>

    <string name="desc_anonymous_auth">Acesso an"onimo.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="usuario_logado"></string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="cadastrar_descontos">Cadastrar descontos</string>
    <string name="tirar_foto">Tirar foto</string>
    <string name="importar_foto_da_gallery">importar foto</string>
    <string name="detalhes">detalhes produto</string>
    <string name="compartilhar">publicar</string>
    <string name="compartilhe">divulgar</string>
    <string name="publicar">publicar</string>
    <string name="gerencial">Gerenciar conta</string>
    <string name="cadastrar_atendentes">cadastrar atendentes</string>
    <string name="relatorios">relatorios</string>
    <string name="meu_cadastro">meu cadastro</string>
    <string name="menu_logout">sair</string>
    <string name="heading_recent">Descontos recentes</string>
    <string name="heading_my_posts">Meus descontos</string>
    <string name="heading_my_top_posts">Melhores descontos</string>
    <string name="sign_up">Novo cadastro</string>
    <string name="novo_cadastro">Cadastre-se aqui</string>
    <string name="first_post">Meu primeiro desconto</string>
    <string name="not_yet">não está implementado ainda, percebeu?</string>
</resources>
