<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:enabled="true"
        android:title="@string/cadastrar_descontos"
        tools:onClick="@string/not_yet">
        <menu>
            <item
                android:enabled="false"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/tirar_foto" />
            <item
                android:enabled="false"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/importar_foto_da_gallery" />

            <item
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/detalhes" />

            <item
                android:enabled="true"
                android:title="@string/compartilhe">
                <menu>
                    <item
                        android:enabled="false"
                        android:icon="@drawable/ic_menu_share"
                        android:title="@string/compartilhar" />
                    <item
                        android:enabled="false"
                        android:icon="@drawable/ic_menu_send"
                        android:title="@string/publicar" />
                </menu>
            </item>

        </menu>
    </item>


    <item
        android:enabled="true"
        android:title="@string/gerencial">
        <menu>
            <item
                android:enabled="false"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/cadastrar_atendentes" />
            <item
                android:enabled="false"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/relatorios" />
            <item
                android:enabled="false"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/meu_cadastro" />
        </menu>
    </item>


    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="never" />


</menu>
